mdt_cli/tests/snapshots/snapshots__multiple_providers_list.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp9tOHvu
    - list
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Providers:
  @header template.t.md:1 (2 consumer(s))
  @install template.t.md:9 (2 consumer(s))
  @usage template.t.md:17 (2 consumer(s))

Consumers:
  =header docs.md:3 [linked]
  =install docs.md:11 [linked]
  =usage docs.md:17 [linked]
  =header readme.md:1 [linked]
  =install readme.md:9 [linked]
  =usage readme.md:17 [linked]

3 provider(s), 6 consumer(s)

----- stderr -----
