mdt_cli/tests/snapshots/snapshots__multiple_providers_update.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpMlOu8j
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Updated 6 block(s) in 2 file(s).

----- stderr -----
