mdt_cli/tests/snapshots/snapshots__no_subcommand.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpDK3lZz
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: 'mdt' requires a subcommand but one was not provided
  [subcommands: init, check, update, list, info, doctor, assist, skill, lsp, mcp, help]

Usage: mdt [OPTIONS] <COMMAND>

For more information, try '--help'.
