mdt_cli/tests/snapshots/snapshots__orphan_consumer_check.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpieAXMv
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  orphan consumers: 1
  stale consumers: 1

Orphan consumers:
  consumer `nonexistent` at readme.md:9:1 has no provider

Stale consumers:
  block `greeting` at readme.md:3:1

1 consumer block(s) have no provider and 1 consumer block(s) are out of date. Rename those consumers or define the providers in `*.t.md` files, then run `mdt update`.
