mdt_cli/tests/snapshots/snapshots__pad_blocks_multi_lang_check_after_update.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpFojGNh
    - check
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Check passed: all consumer blocks are up to date.

----- stderr -----
