mdt_cli/tests/snapshots/snapshots__pad_blocks_multi_lang_check_stale.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmp5eQJyC
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 4

Stale consumers:
  block `api_docs` at src/index.ts:2:4
  block `api_docs` at src/lib.rs:1:5
  block `api_docs` at src/main.go:3:4
  block `api_docs` at src/main.py:1:3

4 consumer block(s) are out of date. Run `mdt update`.
