mdt_cli/tests/snapshots/snapshots__pad_blocks_multi_lang_update_idempotent.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpEisXyl
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All consumer blocks are already up to date.

----- stderr -----
