mdt_cli/tests/snapshots/snapshots__pad_blocks_multi_lang_update_index_ts.snap
---
source: mdt_cli/tests/snapshots.rs
expression: index_ts
---
/**
 * <!-- {=api_docs|trim|linePrefix:" * ":true} -->
 * 
 * my-tool v2.0.0
 * 
 * A multi-language tool.
 * 
 * ## Getting Started
 * 
 * Use the default configuration to get started quickly.
 * 
 * <!-- {/api_docs} -->
 */
export function configure() {
	return {};
}
